add solution Game2048 past 5/18