@@ -10,14 +10,28 @@ public class Game2048 extends Game {
         drawScene();
     }
     private void createGame(){
-
+        createNewNumber();
+        createNewNumber();
     }
     private void drawScene(){
         for (int i = 0; i < gameField.length; i++) {
             for (int j = 0; j < gameField.length; j++) {
                 setCellColor(i, j, Color.RED);
             }
-
+        }
+    }
+    private void createNewNumber(){
+        int x = getRandomNumber(SIDE);
+        int y = getRandomNumber(SIDE);
+        if(gameField[x][y] == 0){
+            if(getRandomNumber(10) == 9){
+                gameField[x][y] = 4;
+            } else {
+                gameField[x][y] = 2;
+            }
+        }else{
+            createNewNumber();
         }
     }
 }
+//--module-path "C:\MyProjects\JavaRushTasks\lib\javafx-sdk-17.0.2\lib" --add-modules javafx.controls,javafx.fxml
